Closed Bug 127513 Opened 23 years ago Closed 23 years ago

opening message compose crashes in dibeng.dll and brings Windows 98 down with it

Categories

(MailNews Core :: Composition, defect)

x86
Windows 98
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: dcone)

References

()

Details

(Keywords: crash)

Attachments

(1 file, 1 obsolete file)

Using a morning talkbalk build from 2/23, opening a message compose window crashes after I say "no" to "do you want to make Moz your default mail app?". I can get this crash by pressing Ctrl+M in the browser, and I think it also happens if I click Compose in mail. Reproducability: crashed 3/3 times, took Windows 98 down with it 2/3 times. When it took Windows down with it, a white crash dialog appeared before or instead of the normal grey crash dialog. Talkbalk never appeared.
Keywords: crash, smoketest
Does this crash occur as soon as you hit compose/Ctrl+M, or after it starts loading? I don't have a mail account, but up to the point that you described, I couldn't reproduce it. Win98, Build 2002022308.
Mozilla crashes after the message window appears, and after I click "no" to a default-mailer dialog. By the way, the "grey" crash is in dibeng.dll.
Summary: opening message compose crashes all of Windows 98 → opening message compose crashes in dibeng.dll and brings Windows 98 down with it
When the "white" crash occurs, I see a large white crash dialog with the buttons "Close" and "Ignore". When I click "close", a pattern of short green lines appears all the way across my monitor, through the middle of the toolbar: || || || || || || || || || || || || || || || || || || || || || The "close" button is still depressed when Windows hangs. Both crashes only happen if I use the modern theme; classic works fine.
I am seeing same crash behavior with same build on Win98. The compose window starts to come up but is not completely drawn: the (white) backgrounds for any textfields are not yet painted at time of crash. I haven't seen it crash in dibeng.dll--it only shows module '<unknown>' for me. This also using modern theme. Also, Windows does not die, but many form elements are no longer rendered correctly in subsequent runs of mozilla and some letters from some fonts do not appear completely drawn.
or is it something new that mozilla is doing that is exposing this win98 issue?
I took a 2-23 commercail build and tested around this on win98, can't reproduce. I tested this with 4.7 as the default email app, and again with Outlook Express as the default email app and when I was prompted with the dialog when opening mail in NS6 (2/23 build), I clicked No and finished composing my message and sending it. No crash. We need more details. What app was the designated default at the time?
jesse: I'm assuming you get the same crash even if you don't get the "default mail app" dialog, right?
jesse / paxunix, can you help narrow down when this started happening? what was the last build that didn't have this problem?
I tried this with the 2-23 moz build w/talkback, again No crash.
I can reproduce this bug simply by opening Composer, so default-mail-app isn't the issue.
Since this doesn't happen in Classic theme, could it be related to the fix for 126594 and 122996? Or to the breakage that messed up the Modern chrome for those bugs to begin with? I agree that it appears unrelated to the default mail client. I went into Mail&News, answered "no" to default mail client query, downloaded mail, then hit "compose" button and got the crash. Interestingly, the exact same set of steps succeeded without crash once today. That's the first time it had worked and I retried the same set of steps again and got the same crash. It hasn't worked again yet.
not a mail issue, see http://bugzilla.mozilla.org/show_bug.cgi?id=127513#c11 over to dcone, he seems like a better owner than ducarroz, since it might be related to #122996.
Assignee: ducarroz → dcone
Keywords: smoketest
also, removing the smoketest keyword since it isn't affecting all win98 users. this is serious, but not worth keeping the tree closed for, until we get some more data.
1.) The original checkin to use the PatBlt was on 2002-02-19 2.) The second checkin was on Saturday Night 2002-02-23 10:00 pm Bug 126594 was generated on friday 2002-02-22 because of some windows 98 problems about drawing poorly, but never a crash. So if checkin number 1 did cause this problem.. it would have been crashing since 2-19. Checkin 2 could not have caused it because that was after this problem was reported. So there are a few things to test. 1.) Did the problem.. appear after 2-19, but not before or was it only on the 2/23 builds. Why does it not crash just launching Mozilla on windows 98 with modern skin. I did verify it rendered poorly with my 2-19 build and rendered correctly after my 2/24 checkin. 2.) If you have a reproducable crash.. you can test to see if the PatBlt causes this crash by making the test in nsImageWin.cpp and changing the test from Line 970 "if((mBHead->biWidth<8)&&(mBHead->biHeight<8)){" to "if(1) {" so the PatBlt will never get executed. If the crash goes away.. then this is the culprit. I have not been able to reproduce this crash with my build pulled on Friday 2/22/2002.. that has my changes in it.
Build Composer crash? Modern skin background in browser? 02/14.03 no crash works fine 02/18.03 no crash works fine 02/19.03 crashes ugly 02/23.03 crashes ugly 02/25.03 crashes works fine So bug 122996's change from && to || didn't fix the crash. In 022503, the only part of the window that isn't drawn before the crash is the Composer "toolbar logo" (on the left side of the toolbar). I don't have a build system set up here, so I can't test with if(1). Anyone want to buy me a copy of MSVC? :)
Could be the windows problem: http://support.microsoft.com/default.aspx?scid=kb;EN-US;q235618 update and and the PatBlt thats part of the new background code I installed on Windows 98.. could be triggering?
The support.microsoft.com article and the windows-help.net article are both vague. Neither mentions PatBlt (dibeng.dll probably contains much more) and neither has a program you can download to test whether you're seeing the same crash the article is talking about. I tried updating my graphics driver through Windows Update, but it just said the driver I have is the latest. From control panel -> display -> settings -> advanced -> adapter: Manufacturer: SiS Chip type: 6326 APG REV H0 DAC type: Internal Memory: 8 MB Features: DirectDraw 1.00 Software version: 4.0 Current files: sis6326m.drv,*vdd,sis6326m.vxd,dd326_32.dl...
The following may be interesting: (especially for weeding out dupes) I start Mozilla using the mail client on Win98SE (fully updated with all fixes from microsoft with IE 5.5 (that has to be mentioned as many IE components acording to MS are OS components)). My current Mozilla build is 2002022503. Opening up the Webbrowser works. Opening up the Composer (for web pages) brings up error(1), the composer was fully visibe before the crash. Just pressing compose in the mail window (plain text mail compose) brings up the window, but crashes immediately with error 2: Entering the address book brings up error 3 after displaying the window. Sorry I don't have any talkback, but talkback doesn't even fire or is not in the mozilla-win32-installer-sea.exe of 0225. It has never been missing in any of the builds I have used before. What I think is interesting is that in every above mentioned case, it is always the same DLL causing the problem and nearly all the registers contain the same values. What is also interesting, that replying to a mail worked fine until after so and so many crashes. I'll post this, reboot the machine and say if it still happens. This has never brought down windows for me though. error 1: MOZILLA verursachte eine allgemeine Schutzverletzung in Modul DIBENG.DLL bei 0003:00000fa9. Register: EAX=000000c8 CS=03b7 EIP=00000fa9 EFLGS=00000206 EBX=0000009c SS=3a67 ESP=0000b910 EBP=0000b92e ECX=00000042 DS=5416 ESI=00001ec0 FS=540f EDX=00000000 ES=206f EDI=001a1978 GS=0377 Bytes bei CS:EIP: f3 67 a5 80 d1 00 f3 67 a4 66 03 76 ee 66 03 7e Stapelwerte: 0000cb46 00000000 00000004 00000000 00000000 b9380607 0497854c b9460607 04974b5e 54170000 00001f40 00000004 540f0000 b9700607 04bf0b38 1e3a19e6 error 2: MOZILLA verursachte eine allgemeine Schutzverletzung in Modul DIBENG.DLL bei 0003:00000fa9. Register: EAX=000000c8 CS=03b7 EIP=00000fa9 EFLGS=00000206 EBX=0000009c SS=6fbf ESP=0000b910 EBP=0000b92e ECX=00000042 DS=59be ESI=00001ec0 FS=59c7 EDX=00000000 ES=206f EDI=001a38b8 GS=0377 Bytes bei CS:EIP: f3 67 a5 80 d1 00 f3 67 a4 66 03 76 ee 66 03 7e Stapelwerte: 0000d3b6 00000000 00000004 00000000 00000000 b9380607 0497854c b9460607 04974b5e 59bf0000 00001f40 00000004 59c70000 b9700607 04bf0b38 1f961cbe error 3: MOZILLA verursachte eine allgemeine Schutzverletzung in Modul DIBENG.DLL bei 0003:00000fa9. Register: EAX=000000c8 CS=03b7 EIP=00000fa9 EFLGS=00000206 EBX=0000009c SS=6a07 ESP=0000b910 EBP=0000b92e ECX=00000042 DS=3c6e ESI=00001ec0 FS=71df EDX=00000000 ES=206f EDI=001a7738 GS=0377 Bytes bei CS:EIP: f3 67 a5 80 d1 00 f3 67 a4 66 03 76 ee 66 03 7e Stapelwerte: 0000d442 00000000 00000004 00000000 00000000 b9380607 0497854c b9460607 04974b5e 3c6f0000 00001f40 00000004 71df0000 b9700607 04bf0b38 19de11c6
I just ran on my Windows 98 box.. brought up composer.. and it worked just fine. I can not repro this problem. I think its a driver issue/windows 98. I can remedy this by taking out the PatBlt... the only problem would be is that window 98 would not render backgrounds as fast.
Some additional information: I went back to build 0222 - and eventhough I had used this build for several days with the error only occuring once or twice, when I installed it after 0225, I got the same error now every single time as I did with 0225 - even when replying to mail, which didn't happen before. I went back even further to 0218 - even here it was showing problems. This must have something to do with a tainted profile. I made a backup of my profile, created a new one, and now it worked. Now I copied my old profile into the new profile replacing all the files, opened up a text editor to edit the prefs (did a search and replace on all the paths so it would find my mail folders again) Now it is working again on 0218 again, and I expect 0222 to also work also again. 0222 has the problem of the ugly themes though. Apart from that it was a nice build.
More data points for me: - using a completely new profile has no effect - copying old profile that saw the crash into new profile has no effect Given those... Builds from 2-15 and 2-18 have NOT exhibited the crash. All later builds have crashed in the same place every time I try to compose a message.
I am just gonna pull the PatBlt from windows 98/95 builds then.. seems there is no consistency.. or its not clear if the drivers are having a real problem with this. Not worth the speed up to have this inconsistent behavior.
r=rods
Comment on attachment 71490 [details] [diff] [review] take the PatBlt out from windows 98 and 95 r=rods (migrated from comment) sr=attinasi please fix the comment though, it is pretty confusing as it stands now.
Attachment #71490 - Flags: superreview+
Attachment #71490 - Flags: review+
Attachment #71490 - Attachment is obsolete: true
Comment on attachment 71490 [details] [diff] [review] take the PatBlt out from windows 98 and 95 a=shaver for 0.9.9
Attachment #71490 - Flags: approval+
*** Bug 127850 has been marked as a duplicate of this bug. ***
Keywords: nsbeta1+
*** Bug 127854 has been marked as a duplicate of this bug. ***
I think bug 126138 is also affected by this.
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Jesse, is this fixed for you now? I don't believe I've seen this ever on my win2k box.
Yes, this is fixed for me. I've been using nightlies again (instead of my "ancient" 2/14 build) since 2/28.
Thanks man, verified!
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: