b=127513 r=rods sr=attinasi a=shaver.  Fixes windows 98 problems with the PatBlt.